--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "unit-test": "jest"
+    "unit-test": "jest",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "jest": "^27.3.1"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
     "mqtt": "^4.2.8"
