--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Booking_Handler",
   "version": "1.0.0",
   "description": "",
-  "main": "BookingHandler.js",
+  "main": "Index.js",
   "scripts": {
     "unit-test": "jest",
-    "start": "node BookingHandler.js"
+    "start": "node Index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "inquirer": "^8.2.0",
     "mongoose": "^6.0.13",
     "mqtt": "^4.2.8"
   },
